Adding condensed text, dynamic importing of text

--- a/css/cadenza.css
+++ b/css/cadenza.css
@@ -7,7 +7,7 @@
 /* FONT PATH
  * -------------------------- */
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700");
-@import url("");
+@import url("//fonts.googleapis.com/css?family=Open+Sans+Condensed:300italic,300,700)");
 @font-face {
   font-family: 'FontAwesome';
   src: url("../assets/font-awesome-4.1.0/fonts/fontawesome-webfont.eot?v=4.1.0");
@@ -10116,37 +10116,42 @@ html {
     left: 0;
   }
 }
-/* line 10, ../scss/modules/type/_components.scss */
+/* line 11, ../scss/modules/type/_components.scss */
 body, .type-primary {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-/* line 18, ../scss/modules/type/_components.scss */
+/* line 19, ../scss/modules/type/_components.scss */
 .type-secondary {
   font-family: Georgia, Times, "Times New Roman", serif;
 }
 
-/* line 22, ../scss/modules/type/_components.scss */
+/* line 23, ../scss/modules/type/_components.scss */
 .type-serif, .serif {
   font-family: "Calisto MT", Georgia, "Times New Roman", Times, serif;
 }
 
-/* line 26, ../scss/modules/type/_components.scss */
+/* line 27, ../scss/modules/type/_components.scss */
 .type-sans-serif, .sans-serif {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-/* line 30, ../scss/modules/type/_components.scss */
+/* line 31, ../scss/modules/type/_components.scss */
 .type-monospace, .monospace {
   font-family: Consolas, monaco, monospace;
 }
 
-/* line 34, ../scss/modules/type/_components.scss */
+/* line 35, ../scss/modules/type/_components.scss */
 .type-script, .cursive {
   font-family: "Brush Script MT", cursive;
 }
 
-/* line 40, ../scss/modules/type/_components.scss */
+/* line 39, ../scss/modules/type/_components.scss */
+.type-condensed, .condensed {
+  font-family: "Open Sans Condensed";
+}
+
+/* line 45, ../scss/modules/type/_components.scss */
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   line-height: 1.2;
   font-weight: 300;
@@ -10155,76 +10160,76 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   margin-top: 0;
   margin-bottom: 1rem;
 }
-/* line 48, ../scss/modules/type/_components.scss */
+/* line 53, ../scss/modules/type/_components.scss */
 h1:only-child, .h1:only-child, h2:only-child, .h2:only-child, h3:only-child, .h3:only-child, h4:only-child, .h4:only-child, h5:only-child, .h5:only-child, h6:only-child, .h6:only-child {
   margin-bottom: 0;
 }
 
-/* line 51, ../scss/modules/type/_components.scss */
+/* line 56, ../scss/modules/type/_components.scss */
 h1.inline, .h1.inline, h2.inline, .h2.inline, h3.inline, .h3.inline, h4.inline, .h4.inline, h5.inline, .h5.inline, h6.inline, .h6.inline {
   display: inline-block;
   margin-bottom: 0;
   margin-top: 0;
 }
 
-/* line 58, ../scss/modules/type/_components.scss */
+/* line 63, ../scss/modules/type/_components.scss */
 h1 > small, h1 > .small, .h1 > small, .h1 > .small, h2 > small, h2 > .small, .h2 > small, .h2 > .small, h3 > small, h3 > .small, .h3 > small, .h3 > .small, h4 > small, h4 > .small, .h4 > small, .h4 > .small, h5 > small, h5 > .small, .h5 > small, .h5 > .small, h6 > small, h6 > .small, .h6 > small, .h6 > .small {
   font-size: 74.13723%;
 }
 
-/* line 62, ../scss/modules/type/_components.scss */
+/* line 67, ../scss/modules/type/_components.scss */
 .subheading {
   font-weight: 300;
   margin-top: 0;
   margin-bottom: 1rem;
 }
 
-/* line 68, ../scss/modules/type/_components.scss */
+/* line 73, ../scss/modules/type/_components.scss */
 hgroup {
   margin-bottom: 1rem;
 }
-/* line 71, ../scss/modules/type/_components.scss */
+/* line 76, ../scss/modules/type/_components.scss */
 hgroup h1, hgroup .h1, hgroup h2, hgroup .h2, hgroup h3, hgroup .h3, hgroup h4, hgroup .h4, hgroup h5, hgroup .h5, hgroup h6, hgroup .h6 {
   margin-bottom: 0;
 }
 
-/* line 80, ../scss/modules/type/_components.scss */
+/* line 85, ../scss/modules/type/_components.scss */
 h1, .h1 {
   font-size: 33.80875px ;
   font-size: 2.11305rem ;
 }
 
-/* line 80, ../scss/modules/type/_components.scss */
+/* line 85, ../scss/modules/type/_components.scss */
 h2, .h2 {
   font-size: 29.11034px ;
   font-size: 1.8194rem ;
 }
 
-/* line 80, ../scss/modules/type/_components.scss */
+/* line 85, ../scss/modules/type/_components.scss */
 h3, .h3 {
   font-size: 25.06487px ;
   font-size: 1.56655rem ;
 }
 
-/* line 80, ../scss/modules/type/_components.scss */
+/* line 85, ../scss/modules/type/_components.scss */
 h4, .h4 {
   font-size: 21.5816px ;
   font-size: 1.34885rem ;
 }
 
-/* line 80, ../scss/modules/type/_components.scss */
+/* line 85, ../scss/modules/type/_components.scss */
 h5, .h5 {
   font-size: 18.5824px ;
   font-size: 1.1614rem ;
 }
 
-/* line 80, ../scss/modules/type/_components.scss */
+/* line 85, ../scss/modules/type/_components.scss */
 h6, .h6 {
   font-size: 16px ;
   font-size: 1rem ;
 }
 
-/* line 87, ../scss/modules/type/_components.scss */
+/* line 92, ../scss/modules/type/_components.scss */
 body {
   font-style: normal;
   color: #363636;
@@ -10237,64 +10242,64 @@ body {
   hyphens: auto;
 }
 
-/* line 96, ../scss/modules/type/_components.scss */
+/* line 101, ../scss/modules/type/_components.scss */
 p {
   margin-bottom: 1rem;
   line-height: 1.5;
   font-weight: 300;
 }
-/* line 101, ../scss/modules/type/_components.scss */
+/* line 106, ../scss/modules/type/_components.scss */
 p.lead {
   font-size: 18.5824px ;
   font-size: 1.1614rem ;
 }
 
-/* line 104, ../scss/modules/type/_components.scss */
+/* line 109, ../scss/modules/type/_components.scss */
 small, .small {
   font-size: 86.10298%;
 }
 
-/* line 108, ../scss/modules/type/_components.scss */
+/* line 113, ../scss/modules/type/_components.scss */
 .large {
   font-size: 116.14%;
 }
 
-/* line 112, ../scss/modules/type/_components.scss */
+/* line 117, ../scss/modules/type/_components.scss */
 strong, b, .strong {
   font-weight: bold;
 }
 
-/* line 116, ../scss/modules/type/_components.scss */
+/* line 121, ../scss/modules/type/_components.scss */
 .weak {
   font-weight: normal;
 }
 
-/* line 120, ../scss/modules/type/_components.scss */
+/* line 125, ../scss/modules/type/_components.scss */
 blockquote footer cite, em, .italics {
   font-style: italic;
 }
 
-/* line 124, ../scss/modules/type/_components.scss */
+/* line 129, ../scss/modules/type/_components.scss */
 .uppercase {
   text-transform: uppercase;
 }
 
-/* line 128, ../scss/modules/type/_components.scss */
+/* line 133, ../scss/modules/type/_components.scss */
 .lowercase {
   text-transform: lowercase;
 }
 
-/* line 132, ../scss/modules/type/_components.scss */
+/* line 137, ../scss/modules/type/_components.scss */
 ul.inline li, .nowrap, .dropdown-container > menu ul li, .dropdown-container > .dropdown ul li, nav ul li, button, .button, input[type=button], input[type=submit] {
   white-space: nowrap;
 }
 
-/* line 136, ../scss/modules/type/_components.scss */
+/* line 141, ../scss/modules/type/_components.scss */
 mark, .mark {
   background: yellow;
 }
 
-/* line 140, ../scss/modules/type/_components.scss */
+/* line 145, ../scss/modules/type/_components.scss */
 abbr, acronym {
   font-size: 116.14%;
   text-transform: uppercase;
@@ -10302,81 +10307,81 @@ abbr, acronym {
   cursor: help;
 }
 
-/* line 150, ../scss/modules/type/_components.scss */
+/* line 155, ../scss/modules/type/_components.scss */
 .upper-caps, .small-caps {
   font-variant: small-caps;
 }
 
-/* line 154, ../scss/modules/type/_components.scss */
+/* line 159, ../scss/modules/type/_components.scss */
 .upper-caps {
   text-transform: lowercase;
 }
 
-/* line 162, ../scss/modules/type/_components.scss */
+/* line 167, ../scss/modules/type/_components.scss */
 a {
   display: inline-block;
 }
 
-/* line 168, ../scss/modules/type/_components.scss */
+/* line 173, ../scss/modules/type/_components.scss */
 .anchors-hint a {
   text-decoration: none;
 }
-/* line 172, ../scss/modules/type/_components.scss */
+/* line 177, ../scss/modules/type/_components.scss */
 .anchors-hint:hover a {
   text-decoration: underline;
 }
 
-/* line 179, ../scss/modules/type/_components.scss */
+/* line 184, ../scss/modules/type/_components.scss */
 .text-left {
   text-align: left;
 }
 
-/* line 183, ../scss/modules/type/_components.scss */
+/* line 188, ../scss/modules/type/_components.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 187, ../scss/modules/type/_components.scss */
+/* line 192, ../scss/modules/type/_components.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 191, ../scss/modules/type/_components.scss */
+/* line 196, ../scss/modules/type/_components.scss */
 .text-justify {
   text-align: justify;
 }
 
-/* line 196, ../scss/modules/type/_components.scss */
+/* line 201, ../scss/modules/type/_components.scss */
 .cols-middle, .columns-middle, .text-middle {
   display: table;
 }
-/* line 199, ../scss/modules/type/_components.scss */
+/* line 204, ../scss/modules/type/_components.scss */
 .cols-middle > *, .columns-middle > *, .text-middle > * {
   display: table-cell;
   vertical-align: middle;
 }
 
-/* line 205, ../scss/modules/type/_components.scss */
+/* line 210, ../scss/modules/type/_components.scss */
 ul.inline li, .nowrap, .dropdown-container > menu ul li, .dropdown-container > .dropdown ul li, nav ul li, button, .button, input[type=button], input[type=submit] {
   white-space: nowrap;
   overflow: hidden;
 }
 
-/* line 212, ../scss/modules/type/_components.scss */
+/* line 217, ../scss/modules/type/_components.scss */
 pre, .pre {
   white-space: pre;
   font-size: 16px ;
   font-size: 1rem ;
   font-family: Consolas, monaco, monospace;
 }
-/* line 217, ../scss/modules/type/_components.scss */
+/* line 222, ../scss/modules/type/_components.scss */
 pre code, .pre code, pre .code, .pre .code {
   word-wrap: normal;
   white-space: -moz-pre-wrap;
   white-space: pre-wrap;
 }
 
-/* line 224, ../scss/modules/type/_components.scss */
+/* line 229, ../scss/modules/type/_components.scss */
 pre code, pre .code, .pre code, .pre .code, code, .code {
   white-space: pre;
   font-size: 13.77648px ;
@@ -10384,80 +10389,80 @@ pre code, pre .code, .pre code, .pre .code, code, .code {
   font-family: Consolas, monaco, monospace;
 }
 
-/* line 230, ../scss/modules/type/_components.scss */
+/* line 235, ../scss/modules/type/_components.scss */
 kbd, .kbd {
   font-size: 11.86196px ;
   font-size: 0.74137rem ;
 }
 
-/* line 236, ../scss/modules/type/_components.scss */
+/* line 241, ../scss/modules/type/_components.scss */
 blockquote {
   padding: 1rem;
   margin-bottom: 1rem;
   font-size: 18.5824px ;
   font-size: 1.1614rem ;
 }
-/* line 241, ../scss/modules/type/_components.scss */
+/* line 246, ../scss/modules/type/_components.scss */
 blockquote footer {
   font-size: 13.77648px ;
   font-size: 0.86103rem ;
 }
 
-/* line 253, ../scss/modules/type/_components.scss */
+/* line 258, ../scss/modules/type/_components.scss */
 q::before, q.double::before {
   content: '\201C';
 }
-/* line 254, ../scss/modules/type/_components.scss */
+/* line 259, ../scss/modules/type/_components.scss */
 q::after, q.double::after {
   content: '\201D';
 }
 
-/* line 258, ../scss/modules/type/_components.scss */
+/* line 263, ../scss/modules/type/_components.scss */
 q > q::before, q.single::before {
   content: '\2018';
 }
-/* line 259, ../scss/modules/type/_components.scss */
+/* line 264, ../scss/modules/type/_components.scss */
 q > q::after, q.single::after {
   content: '\2019';
 }
 
-/* line 263, ../scss/modules/type/_components.scss */
+/* line 268, ../scss/modules/type/_components.scss */
 q.arrow-double::before {
   content: '\00AB';
 }
-/* line 264, ../scss/modules/type/_components.scss */
+/* line 269, ../scss/modules/type/_components.scss */
 q.arrow-double::after {
   content: '\00BB';
 }
 
-/* line 268, ../scss/modules/type/_components.scss */
+/* line 273, ../scss/modules/type/_components.scss */
 q.arrow-single::before {
   content: '\2039';
 }
-/* line 269, ../scss/modules/type/_components.scss */
+/* line 274, ../scss/modules/type/_components.scss */
 q.arrow-single::after {
   content: '\203A';
 }
 
-/* line 273, ../scss/modules/type/_components.scss */
+/* line 278, ../scss/modules/type/_components.scss */
 q.low-double::before {
   content: '\201E';
 }
-/* line 274, ../scss/modules/type/_components.scss */
+/* line 279, ../scss/modules/type/_components.scss */
 q.low-double::after {
   content: '\201D';
 }
 
-/* line 278, ../scss/modules/type/_components.scss */
+/* line 283, ../scss/modules/type/_components.scss */
 q.low-single::before {
   content: '\201A';
 }
-/* line 279, ../scss/modules/type/_components.scss */
+/* line 284, ../scss/modules/type/_components.scss */
 q.low-single::after {
   content: '\2019';
 }
 
-/* line 284, ../scss/modules/type/_components.scss */
+/* line 289, ../scss/modules/type/_components.scss */
 hr, .hr {
   clear: both;
   height: 0;
@@ -10468,64 +10473,64 @@ hr, .hr {
   border-bottom: none;
 }
 
-/* line 296, ../scss/modules/type/_components.scss */
+/* line 301, ../scss/modules/type/_components.scss */
 ul.unstyled, ul.inline, ul, ol, dl {
   list-style-position: outside;
   margin-bottom: 1rem;
   padding: 0;
 }
-/* line 310, ../scss/modules/type/_components.scss */
+/* line 315, ../scss/modules/type/_components.scss */
 ul.unstyled {
   list-style: none;
   margin-left: 0;
 }
 
-/* line 316, ../scss/modules/type/_components.scss */
+/* line 321, ../scss/modules/type/_components.scss */
 ul.inline {
   margin-left: 0;
 }
-/* line 320, ../scss/modules/type/_components.scss */
+/* line 325, ../scss/modules/type/_components.scss */
 ul.inline li {
   display: inline-block;
   padding-right: 0 1rem 0 0;
 }
 
-/* line 327, ../scss/modules/type/_components.scss */
+/* line 332, ../scss/modules/type/_components.scss */
 ul {
   margin-left: 1rem;
 }
 
-/* line 333, ../scss/modules/type/_components.scss */
+/* line 338, ../scss/modules/type/_components.scss */
 ul.square {
   list-style-type: square;
 }
 
-/* line 334, ../scss/modules/type/_components.scss */
+/* line 339, ../scss/modules/type/_components.scss */
 ul.circle {
   list-style-type: circle;
 }
 
-/* line 335, ../scss/modules/type/_components.scss */
+/* line 340, ../scss/modules/type/_components.scss */
 ul.disc {
   list-style-type: disc;
 }
 
-/* line 336, ../scss/modules/type/_components.scss */
+/* line 341, ../scss/modules/type/_components.scss */
 ul.no-bullet {
   list-style-type: none;
 }
 
-/* line 338, ../scss/modules/type/_components.scss */
+/* line 343, ../scss/modules/type/_components.scss */
 ol {
   margin-left: 1.4rem;
 }
 
-/* line 347, ../scss/modules/type/_components.scss */
+/* line 352, ../scss/modules/type/_components.scss */
 dl dt {
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
-/* line 352, ../scss/modules/type/_components.scss */
+/* line 357, ../scss/modules/type/_components.scss */
 dl dd {
   margin-bottom: 0.5rem;
 }
