--- a/scss/modules/type/_classes.scss
+++ b/scss/modules/type/_classes.scss
@@ -16,6 +16,8 @@ body, .type-primary { @extend %type-primary; }
 
 .type-script, .cursive { @extend %type-script; }
 
+.type-condensed, .condensed { @extend %type-condensed; }
+
 // Headings
 // --------
 
