--- a/scss/modules/buttons/_components.scss
+++ b/scss/modules/buttons/_components.scss
@@ -49,10 +49,12 @@
 %button-left { 
     float: left;
     margin-left: 0;
+    margin-right: 0.5rem;
 }
 
 %button-right {
     float: right;
+    margin-left: 0.5rem;
     margin-right: 0;
 }
 
