--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -109,9 +109,9 @@
                         <li><a><i class="fa fa-smile-o"></i></a></li>
                     </ul>
                 </nav>
-                <div class="col-6">
-                    <button class="right small">Post</button>
-                    <button class="right small light">Friends</button>
+                <div class="col-6 buttons-right">
+                    <button class="small">Post</button>
+                    <button class="small light">Friends</button>
                 </div>
             </div>
         </div>
