Added .overlap- classes, .block labels, .alert-small, .shape-[circle/square]-[small/medium/large], large and double headers, dotted hr's, added $factor to type-scale mixins, changed light gray color.

--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -78,11 +78,11 @@
         <div class="pad">
             <span>To</span>
             <span class="badge light no-pad">
-                <img src="" alt="" class="circle bg-primary" height="30" width="30">
+                <img src="" alt="" class="shape-circle bg-primary" height="30" width="30">
                 <span class="pad-horizontal-small">Trevor Hansen</span>
             </span>
             <span class="badge light no-pad">
-                <img src="" alt="" class="circle bg-primary" height="30" width="30">
+                <img src="" alt="" class="shape-circle bg-primary" height="30" width="30">
                 <span class="pad-horizontal-small">Alex Nielson</span>
             </span>
         </div>
@@ -114,6 +114,98 @@
                     <button class="small light">Friends</button>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="gg-device border-light float-left">
+    <div class="gg-header theme-primary">
+        <a class="text-center"><i class="fa fa-arrow-left"></i></a>
+        <div class="pad-horizontal">
+            <span>Ali Connors</span>
+        </div>
+        <a href="" class="text-center"><i class="fa fa-pencil"></i></a>
+        <a href="" class="text-center"><i class="fa fa-ellipsis-v"></i></a>
+    </div>
+    <div>
+        <button class="shape-circle-large overlap-top"><i class="fa fa-star"></i></button>
+        <div class="gg-list-item">
+            <div class="text-center"><i class="fa fa-phone"></i></div>
+            <div>
+                <p>
+                    <span>(650) 555-1234</span><br>
+                    <small>Mobile</small>
+                </p>
+            </div>
+            <div><i class="fa fa-quote-right"></i></div>
+        </div>
+        <div class="gg-list-item">
+            <div class="text-center"></div>
+            <div>
+                <p>
+                    <span>(321) 518-2334</span><br>
+                    <small>Work</small>
+                </p>
+            </div>
+            <div><i class="fa fa-quote-right"></i></div>
+        </div>
+        <hr>
+        <div class="gg-list-item">
+            <div class="text-center"><i class="fa fa-mail"></i></div>
+            <div>
+                <span>aliconnors@example.com</span><br>
+                <small>Personal</small>
+            </div>
+            <div></div>
+        </div>
+        <div class="gg-list-item">
+            <div class="text-center"></div>
+            <div>
+                <span>ali_connors@example.com</span><br>
+                <small>Work</small>
+            </div>
+            <div></div>
+        </div>
+    </div>
+</div>
+
+<div class="gg-device border-light float-left">
+    <div class="gg-header theme-primary">
+        <a class="text-center"><i class="fa fa-arrow-left"></i></a>
+        <div class="pad-horizontal">
+            <span>June 2014 <i class="fa fa-caret-down"></i></span>
+        </div>
+        <a href="" class="text-center"><i class="fa fa-pencil"></i></a>
+        <a href="" class="text-center"><i class="fa fa-ellipsis-v"></i></a>
+    </div>
+    <div>
+        <div class="gg-list-item">
+            <div class="text-center"><i class="fa fa-times"></i></div>
+            <div>
+                <div>
+                    <span>Monday, June</span>
+                    <h1 class="color-secondary">2</h1>
+                    <div class="alert-small">Schedule Haircut</div>
+                    <div class="alert-small">Make dinner reservations</div>
+                    <hr>
+                    <span>&nbsp;</span>
+                    <hr class="dotted">
+                    <span>&nbsp;</span>
+                    <hr>
+                    <span>8 AM</span>
+                    <hr class="dotted">
+                    <span>&nbsp;</span>
+                    <hr>
+                    <div class="alert-small secondary">
+                        <ul class="unstyled">
+                            <li><strong>Weekly Team Meeting</strong></li>
+                            <li>9 - 10a</li>
+                            <li>6F, Cumulus</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div><i class="fa fa-quote-right"></i></div>
         </div>
     </div>
 </div>
