--- a/scss/modules/labels/_classes.scss
+++ b/scss/modules/labels/_classes.scss
@@ -3,7 +3,11 @@
 // ==============
 
 // Label Classes
-.label { @extend %label; }
+.label {
+    @extend %label;
+
+    &.block { @extend %label-block; }
+}
 
 // Badge Classes
 .badge {
