--- a/scss/modules/panels/_components.scss
+++ b/scss/modules/panels/_components.scss
@@ -76,6 +76,11 @@
     }
 }
 
+%alert-small {
+    padding: $alert-small-padding;
+    margin: $alert-small-margin;
+}
+
 %alert-group {
     margin: $alert-margin;
     
