--- a/scss/modules/type/_module.scss
+++ b/scss/modules/type/_module.scss
@@ -45,8 +45,12 @@ $type-heading-color-dark: $type-heading-color !default;
 $type-heading-color-light: $type-base-color-light !default;
 $type-heading-margin-top: 0 !default;
 $type-heading-margin-bottom: $x-rem !default;
+$type-heading-large-style: inherit !default;
+$type-heading-large-scale: 2 !default;
 $type-heading-small-style: uppercase !default;
 $type-heading-small-scale: -2 !default;
+$type-heading-double-factor: 2 !default;
+$type-heading-double-font-weight: $type-base-font-weight !default;
 // $type-subheading-color: lighten($type-header-color, 15%) !default;
 $type-subheading-font-weight: 300 !default;
 $type-subheading-margin-top: 0 !default;
