--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -31,7 +31,7 @@ $color-secondary: #E74C30 !default;
 $color-dark: #363636 !default;
 $color-light: #EFEFEF !default;
 $color-gray: #525252 !default;
-$color-gray-light: #EFEFEF !default;
+$color-gray-light: #E7E7E7 !default;
 $color-white: #FFF !default;
 
 $color-lighten-opacity: 0.3 !default;
