New component: %subtext[-light/dark]

--- a/docs/views/sandbox.html
+++ b/docs/views/sandbox.html
@@ -132,20 +132,20 @@
         <div class="gg-list-item">
             <div class="text-center"><i class="fa fa-phone"></i></div>
             <div>
-                <p>
-                    <span>(650) 555-1234</span><br>
-                    <small>Mobile</small>
-                </p>
+                <ul class="unstyled">
+                    <li><span>(650) 555-1234</span><br></li>
+                    <li class="subtext"><small>Mobile</small></li>
+                </ul>
             </div>
             <div><i class="fa fa-quote-right"></i></div>
         </div>
         <div class="gg-list-item">
             <div class="text-center"></div>
             <div>
-                <p>
-                    <span>(321) 518-2334</span><br>
-                    <small>Work</small>
-                </p>
+                <ul class="unstyled">
+                    <li><span>(335) 555-1234</span><br></li>
+                    <li class="subtext"><small>Work</small></li>
+                </ul>
             </div>
             <div><i class="fa fa-quote-right"></i></div>
         </div>
@@ -153,16 +153,20 @@
         <div class="gg-list-item">
             <div class="text-center"><i class="fa fa-mail"></i></div>
             <div>
-                <span>aliconnors@example.com</span><br>
-                <small>Personal</small>
+                <ul class="unstyled">
+                    <li><span>aliconnors@example.com</span></li>
+                    <li class="subtext"><small>Personal</small></li>
+                </ul>
             </div>
             <div></div>
         </div>
         <div class="gg-list-item">
             <div class="text-center"></div>
             <div>
-                <span>ali_connors@example.com</span><br>
-                <small>Work</small>
+                <ul class="unstyled">
+                    <li><span>ali_connors@example.com</span></li>
+                    <li class="subtext"><small>Work</small></li>
+                </ul>
             </div>
             <div></div>
         </div>
@@ -183,10 +187,16 @@
             <div class="text-center"><i class="fa fa-times"></i></div>
             <div>
                 <div>
-                    <span>Monday, June</span>
-                    <h1 class="color-secondary">2</h1>
+                    <span class="subtext">Monday, June</span>
+                    <h1 class="color-secondary double">2</h1>
                     <div class="alert-small">Schedule Haircut</div>
                     <div class="alert-small">Make dinner reservations</div>
+                    <div class="">
+                        <div><i class="fa fa-times"></i></div>
+                        <div>This is some long!</div>
+                        <div><i class="fa fa-times"></i></div>
+                        <div><i class="fa fa-times"></i></div>
+                    </div>
                     <hr>
                     <span>&nbsp;</span>
                     <hr class="dotted">
