--- a/scss/modules/type/_themes.scss
+++ b/scss/modules/type/_themes.scss
@@ -19,6 +19,9 @@
 
 		&.dark { color: $type-base-color-dark; }
 		&.light { color: $type-base-color-light; }
+		&.subtext { color: $type-subtext-color; }
+		&.subtext-light { color: $type-subtext-color-light; }
+		&.subtext-dark { color: $type-subtext-color-dark; }
 	}
 }
 
